package interator;

public abstract class Collection {
    abstract Iterator createItertor();
}
