package interator;

public interface  Iterator {
    Object first();
    Object next();
    Object current();
    boolean isDone();
}
